05_network-policies/networkpolicy2.yaml
# This NetworkPolicy will allow incoming traffic to the database PODs only from the echo application PODs.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-db-traffic
  namespace: echo
spec:
  podSelector:
    matchLabels:
      app: database
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: echo-app # Allow traffic only from echo application PODs
    ports:
    - protocol: TCP
      port: 5432
